// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TimelinePosition should match snapshot when not selected 1`] = `
<div
  class="text-center mb-8 w-32"
>
  <p
    class="text-sm font-bold transition-colors duration-300 leading-tight mb-1 text-stone-700 group-hover:text-stone-950"
    title="Test Company / Division"
  >
    Test Company
  </p>
  <p
    class="text-xs transition-colors duration-300 leading-tight text-stone-500 group-hover:text-stone-700"
  >
    test.position.key
  </p>
</div>
`;

exports[`TimelinePosition should match snapshot when selected 1`] = `
<div
  class="text-center mb-8 w-32"
>
  <p
    class="text-sm font-bold transition-colors duration-300 leading-tight mb-1 text-stone-950"
    title="Test Company / Division"
  >
    Test Company
  </p>
  <p
    class="text-xs transition-colors duration-300 leading-tight text-stone-900"
  >
    test.position.key
  </p>
</div>
`;
